# echomirror-sdk

./: .eslintrc.cjs  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  tsconfig.base.json  tsconfig.json
.github/workflows/: docs.yml  flutter-ci.yml  flutter.yml  js-ci.yml  python-ci.yml  python-publish.yml  rust-ci.yml  stellar.yml  swift-ci.yml  wasm-publish.yml
.github/workflows/workflows/: python-ci.yml
crates/echomirror-core/: Cargo.toml
crates/echomirror-core/src/: client.rs  config.rs  error.rs  lib.rs  metrics.rs  mood.rs  social.rs  types.rs
crates/echomirror-core/tests/: client_retry_tests.rs  metrics_tests.rs
crates/echomirror-ffi/: Cargo.toml
crates/echomirror-ffi/src/: lib.rs
crates/echomirror-python/: Cargo.toml  README.md  pyproject.toml
crates/echomirror-python/python/echomirror/: __init__.py  __init__.pyi
crates/echomirror-python/src/: client.rs  echo_mirror.rs  errors.rs  lib.rs  mood.rs  social.rs  stellar.rs  types.rs
crates/echomirror-python/tests/: conftest.py  test_mood.py  test_social.py  test_stellar.py
crates/echomirror-stellar/: Cargo.toml
crates/echomirror-stellar/src/: balance.rs  friendbot.rs  horizon.rs  lib.rs  transaction.rs
crates/echomirror-sync/: Cargo.toml
crates/echomirror-sync/src/: cursor.rs  engine.rs  filter.rs  lib.rs  stream.rs
crates/echomirror-wasm/: Cargo.toml
crates/echomirror-wasm/src/: lib.rs
docs-site/: docusaurus.config.ts  package.json
docs-site/docs/quickstart/: python.md  swift.md
docs-site/versioned_docs/version-0.1.0/: core-concepts.md  intro.mdx
docs-site/versioned_docs/version-0.1.0/api/js/: index.md  typedoc-sidebar.cjs
docs-site/versioned_docs/version-0.1.0/api/js/core/src/: index.md
docs-site/versioned_docs/version-0.1.0/api/js/core/src/classes/: AuthError.md  EchoMirrorClient.md  EchoMirrorError.md  NetworkError.md  RateLimitError.md
docs-site/versioned_docs/version-0.1.0/api/js/core/src/interfaces/: AIReflection.md  EchoMirrorConfig.md  EchoTransfer.md  GlobalFeedEntry.md  LeaderboardEntry.md  MoodEntry.md  MoodStreak.md  MoodSummary.md  StellarBalance.md  StellarTransaction.md  UserProfile.md
docs-site/versioned_docs/version-0.1.0/api/js/core/src/type-aliases/: MoodScore.md  MoodTag.md  SDKEvent.md  SDKEventHandler.md
docs-site/versioned_docs/version-0.1.0/api/js/mood/src/: index.md
docs-site/versioned_docs/version-0.1.0/api/js/mood/src/functions/: deleteMoodEntry.md  getAIReflection.md  getMoodEntry.md  getMoodHistory.md  getMoodStreak.md  getMoodSummary.md  logMood.md  requestAIReflection.md
docs-site/versioned_docs/version-0.1.0/api/js/mood/src/interfaces/: AIReflection.md  GetMoodHistoryOptions.md  LogMoodPayload.md  MoodEntry.md  MoodStreak.md  MoodSummary.md
docs-site/versioned_docs/version-0.1.0/api/js/mood/src/type-aliases/: MoodScore.md  MoodTag.md
docs-site/versioned_docs/version-0.1.0/api/js/react/src/: index.md
docs-site/versioned_docs/version-0.1.0/api/js/react/src/functions/: EchoMirrorProvider.md  useEchoMirrorClient.md  useMoodStreak.md  useProfile.md  useSDKEvent.md
docs-site/versioned_docs/version-0.1.0/api/js/react/src/interfaces/: EchoMirrorProviderProps.md
docs-site/versioned_docs/version-0.1.0/api/js/stellar/src/: index.md
docs-site/versioned_docs/version-0.1.0/api/js/stellar/src/functions/: connectFreighter.md  fundTestnetAccount.md  getBalance.md  getTransactionHistory.md  sendEcho.md  signWithFreighter.md  submitTransaction.md
docs-site/versioned_docs/version-0.1.0/api/js/stellar/src/interfaces/: EchoTransfer.md  FreighterConnection.md  StellarBalance.md  StellarTransaction.md
docs-site/versioned_docs/version-0.1.0/quickstart/: flutter.md  javascript.md  react.md  rust.md
examples/flutter-provider-app/: pubspec.yaml
examples/flutter-provider-app/lib/: main.dart
examples/react-app/: index.html  package.json  tsconfig.json
examples/react-app/src/: App.tsx
examples/swiftui/EchoMirrorExample/: ContentView.swift  EchoMirrorExampleApp.swift  README.md
examples/vanilla-js/: index.html  package.json
extensions/chrome/: manifest.json
extensions/chrome/src/: background.ts  popup.ts
extensions/vscode/: package.json
extensions/vscode/snippets/: echomirror.code-snippets
extensions/vscode/src/: extension.ts
