[workspace]
resolver = "2"

members = [
    "crates/echomirror-core",
    "crates/echomirror-stellar",
    "crates/echomirror-sync",
    "crates/echomirror-ffi",
    "crates/echomirror-wasm",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Echo Mirror Butler <dev@echomirror.dev>"]
repository = "https://github.com/Echo-Mirror-Butler/echomirror-sdk"

[workspace.dependencies]
# async runtime
tokio = { version = "1.38", features = ["full"] }
# serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
# Stellar SDK
stellar-sdk = { version = "0.9" }
stellar-sdk = "0.9"
# error handling
thiserror = "1.0"
anyhow = "1.0"
# async traits
async-trait = "0.1"
# time
chrono = { version = "0.4", features = ["serde"] }
# WASM
wasm-bindgen = { version = "0.2" }
wasm-bindgen-futures = { version = "0.4" }
js-sys = { version = "0.3" }
# FFI
uniffi = { version = "0.27" }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
# FFI
uniffi = "0.27"
# crypto
sha2 = "0.10"
hex = "0.4"
