[package]
name = "echomirror-stellar"
description = "EchoMirror Stellar primitives — XLM balance, ECHO token, transaction building"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
echomirror-core = { path = "../echomirror-core" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
chrono.workspace = true
sha2.workspace = true
hex.workspace = true
base64 = "0.22"
