[package]
name = "echomirror-sync"
description = "EchoMirror blockchain sync engine — real-time Stellar ledger streaming with resumable cursors"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
echomirror-core = { path = "../echomirror-core" }
echomirror-stellar = { path = "../echomirror-stellar" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest = { workspace = true, features = ["stream"] }
thiserror.workspace = true
chrono.workspace = true
async-trait.workspace = true
futures = "0.3"
tokio-stream = "0.1"
